--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: NHS Connect - Open APIs
 author: NHS Connect
-email: michael.measures@nhs.net
+email: interoperabilityteam@nhs.net
 description: >
   NHS Connect is an initative to deliver open standards based API access to healthcare systems and data. 
 baseurl: ""
